# myauth

./: .gitignore  README.md  setup.cfg
accounts/: forms.py  models.py  urls.py  views.py
accounts/api/: serializers.py  urls.py  views.py
accounts/api/application/: urls.py  views.py
accounts/api/developer/: urls.py  views.py
accounts/migrations/: 0001_initial.py  0003_alter_user_options.py
accounts/static/accounts/css/: style.css
accounts/static/accounts/js/: script.js  theme.js
accounts/templates/auth/: base.html  index.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html  user_change.html  user_delete.html
accounts/templates/auth/email/: activate_account.html  check_email.html  layout.html  password_reset_email.html  success.html
backend/: requirements.txt
backend/accounts/: forms.py  urls.py
backend/accounts/api/: __init__.py  serializers.py
backend/accounts/migrations/: 0002_alter_user_managers_alter_user_username.py
backend/accounts/templates/auth/: base.html  index.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html  user_change.html  user_delete.html
backend/accounts/templates/auth/email/: activate_account.html  check_email.html  layout.html  password_reset_email.html  success.html
backend/system/: settings.py  urls.py
frontend/: pubspec.yaml
