[metadata]
name = myauth
version = 0.0.4
description = A Django app to handle authentication.
long_description = file: README.md
author = Immanuel Njuguna
author_email = njugunaimmanuel1@outlook.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    asgiref>=3.8.1
    cffi>=1.16.0
    cryptography>=42.0.5
    cyber @ git+https://github.com/Immanuel-supanova/Cyber.git@81e421316539155f6646f1a654f62c737113cd8f
    Django>=5.0.4
    django-cors-headers>=4.3.1
    djangorestframework>=3.15.1
    djangorestframework-simplejwt>=5.3.1
    pycparser>=2.22
    PyJWT>=2.8.0
    sqlparse>=0.5.0
    tzdata>=2024.1